// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> fill renders  1`] = `
<div>
  <svg
    data-testid="ds-icon"
    fill="rgba(22, 47, 86, 0.38)"
    height="20"
    viewBox="0 0 16 16"
    width="20"
  >
    <mask
      height="14"
      id="prefix__a"
      maskUnits="userSpaceOnUse"
      width="14"
      x="1"
      y="1"
    >
      <g
        clip-path="url(#prefix__clip0)"
        fill="#fff"
      >
        <path
          d="M7.995 7.44c.307 0 .555.248.555.555v2.222a.555.555 0 11-1.11 0V7.995c0-.307.248-.555.555-.555zM7.995 5.218a.555.555 0 100 1.11h.006a.555.555 0 100-1.11h-.006z"
        />
        <path
          clip-rule="evenodd"
          d="M1.885 7.995a6.11 6.11 0 1112.22 0 6.11 6.11 0 01-12.22 0zm6.11-4.999a4.999 4.999 0 100 9.998 4.999 4.999 0 000-9.998z"
          fill-rule="evenodd"
        />
      </g>
    </mask>
    <g
      mask="url(#prefix__a)"
    >
      <path
        d="M0 0h16v16H0z"
        fill="#162F56"
        fill-opacity="0.38"
      />
    </g>
    <defs>
      <clippath
        id="prefix__clip0"
      >
        <path
          d="M1.33 1.33h13.33v13.33H1.33V1.33z"
          fill="#fff"
        />
      </clippath>
    </defs>
  </svg>
</div>
`;

exports[`<Icon /> size name 1`] = `
<div>
  <svg
    fill="rgba(22, 47, 86, 0.38)"
    height="20"
    test-id="ds-icon"
    viewBox="0 0 16 16"
    width="20"
  >
    <mask
      height="14"
      id="prefix__a"
      maskUnits="userSpaceOnUse"
      width="14"
      x="1"
      y="1"
    >
      <g
        clip-path="url(#prefix__clip0)"
        fill="#fff"
      >
        <path
          d="M7.995 7.44c.307 0 .555.248.555.555v2.222a.555.555 0 11-1.11 0V7.995c0-.307.248-.555.555-.555zM7.995 5.218a.555.555 0 100 1.11h.006a.555.555 0 100-1.11h-.006z"
        />
        <path
          clip-rule="evenodd"
          d="M1.885 7.995a6.11 6.11 0 1112.22 0 6.11 6.11 0 01-12.22 0zm6.11-4.999a4.999 4.999 0 100 9.998 4.999 4.999 0 000-9.998z"
          fill-rule="evenodd"
        />
      </g>
    </mask>
    <g
      mask="url(#prefix__a)"
    >
      <path
        d="M0 0h16v16H0z"
        fill="#162F56"
        fill-opacity="0.38"
      />
    </g>
    <defs>
      <clippath
        id="prefix__clip0"
      >
        <path
          d="M1.33 1.33h13.33v13.33H1.33V1.33z"
          fill="#fff"
        />
      </clippath>
    </defs>
  </svg>
</div>
`;

exports[`<Icon /> size name 2`] = `
<div>
  <svg
    data-testid="ds-icon"
    fill="rgba(22, 47, 86, 0.38)"
    height="16"
    viewBox="0 0 16 16"
    width="16"
  >
    <mask
      height="14"
      id="prefix__a"
      maskUnits="userSpaceOnUse"
      width="14"
      x="1"
      y="1"
    >
      <g
        clip-path="url(#prefix__clip0)"
        fill="#fff"
      >
        <path
          d="M7.995 7.44c.307 0 .555.248.555.555v2.222a.555.555 0 11-1.11 0V7.995c0-.307.248-.555.555-.555zM7.995 5.218a.555.555 0 100 1.11h.006a.555.555 0 100-1.11h-.006z"
        />
        <path
          clip-rule="evenodd"
          d="M1.885 7.995a6.11 6.11 0 1112.22 0 6.11 6.11 0 01-12.22 0zm6.11-4.999a4.999 4.999 0 100 9.998 4.999 4.999 0 000-9.998z"
          fill-rule="evenodd"
        />
      </g>
    </mask>
    <g
      mask="url(#prefix__a)"
    >
      <path
        d="M0 0h16v16H0z"
        fill="#162F56"
        fill-opacity="0.38"
      />
    </g>
    <defs>
      <clippath
        id="prefix__clip0"
      >
        <path
          d="M1.33 1.33h13.33v13.33H1.33V1.33z"
          fill="#fff"
        />
      </clippath>
    </defs>
  </svg>
</div>
`;
